# CR-Vigil

./: .gitignore  AGENTS.md  AI代码质量管控方案.md  CHANGELOG.md  README.md  cr-vigil.yml  pyproject.toml
.claude/: settings.local.json
crvigil/: __init__.py  cli.py  config.py  declaration.py  evaluator.py  events.py  file_collect.py  gitlab_collect.py  json_tools.py  snapshots.py  storage.py  utils.py  workflow.py
crvigil/renderer/: __init__.py  admission.py  digest.py  helpers.py  trend.py
crvigil/templates/: daily-digest-template.md  declaration-template.md  weekly-trend-template.md
data/: pr-registry.json  reviewer-levels.json
data/events/: 2026-06.jsonl
data/mrs/: MR-3-llm-testgen.json  PR-001.json  PR-002.json  PR-003.json
data/snapshots/: daily-2026-06-15.json  daily-2026-06-16.json  daily-2026-06-17.json  weekly-2026-W25.json
data/tmp/: mr_full.json
docs/: agent-contract.md  ci-usage.md  codex-usage.md  flowchart.md
reports/admissions/: MR-3-llm-testgen-admission-2026-06-12.md  MR-3-llm-testgen-admission-2026-06-15.md  PR-001-admission-2026-06-12.md  PR-001-admission-2026-06-17.md  PR-002-admission-2026-06-12.md  PR-002-admission-2026-06-17.md  PR-003-admission-2026-06-12.md  PR-003-admission-2026-06-17.md
reports/digests/: daily-digest-2026-06-12.md  daily-digest-2026-06-16.md  daily-digest-2026-06-17.md
scripts/: collect-mr-data.sh  gitlab-api.sh  sync.sh
tests/: test_config_snapshots.py  test_crvigil_cli.py  test_declare.py  test_evaluate_gates.py  test_file_collect.py  test_gitlab_collect.py  test_json_tools.py  test_render_report.py
(+15 files in other folders)
