[project]
name = "cr-vigil"
version = "1.3.0"
description = "Skill-driven CR admission monitor with deterministic gate evaluation and report generation."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
repair = ["json-repair>=0.39.0"]

[project.scripts]
crvigil = "crvigil.cli:main"
